--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <title>MyBlog</title>
   </head>
   <body>
+    <button class="mui-btn mui-btn--fab mui-btn--accent floating-btn" id="auth-btn">Auth</button>
     <div id="sidebar">
       <div class="mui--text-white mui--text-display1 mui--align-vertical">
           MY BLOG
@@ -29,10 +30,10 @@
         
             <div class="mui-textfield mui-textfield--float-label">
               <textarea  id="post-input"
-              required maxlength="256"></textarea>
+              required maxlength="512"></textarea>
               <label for="post-input">What`s new?</label>
             </div>
-            <button type="submit" class="mui-btn mui-btn--raised btn-submit" >
+            <button type="submit" id="submit" class="mui-btn mui-btn--raised btn-submit" disabled>
                 Submit
             </button>
 
@@ -44,9 +45,9 @@
           <div id='list'>
 
           </div>
-          <div class="mui--text-headline">MUI Acquires New Features</div>
+          <!-- <div class="mui--text-headline">MUI Acquires New Features</div>
           <div class="mui--text-black-54">By <a href="#">Team MUI</a> 1 week ago</div>
-          <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis aliquam ipsum sed dignissim. Sed ac accumsan odio. Vivamus tristique dignissim neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc cursus felis nec purus condimentum vestibulum. Donec mauris nisi, sollicitudin eget iaculis id, suscipit id odio. <a href="#">Read more...</a></div>
+          <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis aliquam ipsum sed dignissim. Sed ac accumsan odio. Vivamus tristique dignissim neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc cursus felis nec purus condimentum vestibulum. Donec mauris nisi, sollicitudin eget iaculis id, suscipit id odio. <a href="#">Read more...</a></div> -->
           <br>
           
         </div>
