fix sendMessage bug

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <small class="author">by Stepan Nebykov</small>
       </div>
     </div>
-    <div id="content" class="mui-container-fluid">
+    <div id="content" >
       <div class="mui-row">
         <div class="mui-col-sm-10 mui-col-sm-offset-1">
           <br />
