--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <body>
     <button class="mui-btn mui-btn--fab mui-btn--accent floating-btn" id="auth-btn">Auth</button>
     <div id="sidebar">
+        <img src="img/iam.jpg" alt="image">
       <div class="mui--text-white mui--text-display1 mui--align-vertical">
         MY BLOG
         <br />
